[MINIFY]: test for css and html added
Signed-off-by: ashish <ashishpatel0720@gmail.com>

--- a/test/resources/test.html
+++ b/test/resources/test.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 <h1>heading</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam, at cupiditate delectus deleniti fugiat, harum ipsa labore laboriosam magni nulla obcaecati quae repellendus. Distinctio eum impedit iure laborum voluptatem?</p>
+<p>lorem ipsum 1</p>
+<p>lorem ipsum 2</p>
+<p>lorem ipsum 3</p>
 </body>
 </html>
